--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
             </g>
         </g>
     </svg>
-    <h1>Coming soon!</h1>
+    <h1>Coming soon! <br> InshaAllah</h1>
 </body>
 <footer>
     <p>~AbdullahUthman</p>
