--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
         body {
             width: 100%;
             height: 100%;
+            background: linear-gradient(to bottom, white, blue, blue);
         }
 
         html {
