--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
             </g>
         </g>
     </svg>
-    <h1>Coming soon! <br> InshaAllah</h1>
+    <h1>Coming soon! <br> InshaAllah <br> 👀</h1>
 </body>
 <footer>
     <p>~AbdullahUthman</p>
